--- a/emp/build.gradle
+++ b/emp/build.gradle
@@ -1,35 +1,31 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '2.6.14-SNAPSHOT'
-	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
+	id 'org.springframework.boot' version '3.0.0'
+	id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group = 'com.dw'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+sourceCompatibility = '17'
 
 repositories {
 	mavenCentral()
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	// devtools
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	// thymeleaf
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	//thymeleaf
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	// 롬복
+	//devtools
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	//롬복
 	annotationProcessor 'org.projectlombok:lombok'
 	compileOnly 'org.projectlombok:lombok'
-	// My SQL
+	//MySQL
 	runtimeOnly 'mysql:mysql-connector-java'
-	// ORM ( 내가 작성한 SQL 결과를 JAVA로 변환 *** 면접때 나옴)
-	// ORM 종류 : Mybatis , JPA
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
-	
-	
-	
+	//ORM (내가 작성한 SQL 결과를 JAVA로 변환) Mybatis or JPA
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
 }
 
 tasks.named('test') {
