--- a/emp/src/main/resources/application.yaml
+++ b/emp/src/main/resources/application.yaml
@@ -1,12 +1,11 @@
-# 데이터 베이스 설정
-spring:
+## MYSQL 
+spring: 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/dw_501
-    username: root
+    username: root  
     password: enenqn13!
 
-
-# Mybatis SQL
+## Mybatis SQL
 mybatis:
   mapper-locations: classpath:/sqlmap/sql.xml
